# pytket-docs

./: .gitattributes  .gitignore  .gitmodules  .typos.toml  README.md  build-docs.sh  justfile  pyproject.toml
.github/workflows/: check-docs-build.yml  spelling.yml
docs/: README.md
docs/examples/algorithms_and_protocols/: pytket-qujax_heisenberg_vqe.ipynb  pytket-qujax_qaoa.ipynb
docs/examples/circuit_compilation/: mapping_example.ipynb
docs/manual/: manual_backend.md  manual_compiler.md  manual_intro.md
sphinx/: README.md  index.md
sphinx/examples/algorithms_and_protocols/: phase_estimation.ipynb  pytket-qujax-classification.ipynb
sphinx/examples/backends/: backends_example.ipynb  creating_backends.ipynb
sphinx/manual/: manual_assertion.md  manual_circuit.md  manual_compiler.md  manual_noise.md
